# Uni-materials

./: .gitignore  README.md
1_course/Algebra_and_Geometry/Books/: зміст лекцій.docx  умови домашок АГ.docx
1_course/Discrete_Math/Books/: БФ_І_ПРИКЛАД.docx
1_course/English/Works/: Verbytskyi_Artem_IPS-11_AI_space.docx  Verbytskyi_Artem_IPS-11_Digital_twin_cities.docx  Verbytskyi_Artem_IPS-11_Olympic_Games.docx  Verbytskyi_Artem_IPS-11_Questions_to_military_man.docx  report.docx  Артем Вербицький - FINAL TEST.docx  Артем Вербицький - Test 4 1.doc  Артем Вербицький - Test 4 2.docx  Артем Вербицький - Test 5.docx  Артем Вербицький - exit test.docx  Вербицький Артем ІПС-11 диктант.docx
1_course/FOKE/: ~$рбицький_Артем_ІПС-11_Варіант_8.docx  ~$хуй.docx  Вербицький_Артем_ІПС-11_Варіант_8.docx  Лаба фоке.xlsx  Мартинович Констянтин іпс-11 21 варіант.docx  лаба.docx  лаба1.docx
1_course/Math_Analysis/Lectures/: Функції векторного аргументу (частина 1).docx  екстремуми ФБЗ.docx  теорія Аджубей.doc  функціональні послідовності і ряди.doc  числові ряди.doc
1_course/UZK/: Міф і міфологія.pptx  Романтизм в українській культурі.docx  УЗК семінар 1.docx  реформація.docx
1_course/VDUS/: Вербицький_Артем_ІПС-11_ФКНК_Конспект.docx  Вербицький_Артем_ІПС-11_ФКНК_Контрольна_робота.docx  Освітні_тенденції_в_Середньовічній_Європі_Вербицький_Артем.docx  теми рефератів Вступ  1      Новий Документ Microsoft Word.docx  тест 10 Новий Документ Microsoft Word (2).docx
2_course/Algorithms_and_complexity/Books/: Приклад звіту (1).docx
2_course/Algorithms_and_complexity/Lab1_ideal_hash-master/: HashTable.cpp  HashTable.h  Lab1_ideal_hash.cpp
2_course/Dynamic_systems/Books/: Razdel-1.doc  Razdel-2.doc  Razdel-3.doc  Razdel-4.doc  Razdel-5.doc  Razdel-6.doc  Razdel-7.doc  Razdel-8.doc  Variac-Ischisl.doc
2_course/Dynamic_systems/Lab_1/: Lab Rab ODE Task2023.doc
2_course/Dynamic_systems/Lab_2/: Verbytskyi.docx
2_course/English/Keys/: 135629982-SO-UI-Tests-Key.doc
2_course/English/Works/: AI.docx  Artem Verbytskyi American Revolution.docx  Artem Verbytskyi Employee relations.docx  Artem Verbytskyi Final Test.docx  Artem Verbytskyi Test 15.docx  Cloud computing and virtualization.docx  Cloud computing and virtualization.pptx  Артем Вербицький - Final test.docx  Артем Вербицький - SO2e_UI_Unit_test_8.docx
2_course/OOOP/Elipse/: Elipse.sln  Elipse.vcxproj  main.cpp
2_course/OOOP/Exams/: Verbytkyi-Artem-IPS21-66-OOOP2023winter.docx  ooop-thatstheticket-2024-summer.doc
2_course/OOOP/UML/: sequence.plantuml
2_course/OOOP/Нова папка/: Doxyfile
2_course/Operations_Research/Works/: ДО_Симплекс_метод.xlsx
2_course/Organization_of_databases/Alpha_algebra/: Вербицький_Артем__ІПС_21_Альфа_алгебра.docx
2_course/Organization_of_databases/ER_scheme/: Er-схема.accdb
2_course/Theory_of_algorithms_and_Math_logic/: ~$рбицький_Артем_ІПС_21_ТАМЛ_Завдання_3.docx
3_course/Coursework/: ~$рбицький_Артем_курсова_робота.docx  Вербицький А. В. - н.к. Жереб К.А..docx  Вербицький_Артем_курсова_робота.docx
3_course/Practice/: ~$рбицький_Артем_Виробнича_практика_Звіт.docx  Вербицький_Артем_Виробнича_практика_Звіт.docx  Вербицький_Артем_Виробнича_практика_Щоденник.doc
4_course/Diploma/: Вербицький_Артем_ІПС-41_Заява_бакалаврська_робота.docx
4_course/English/: Alan Turing and the Turing Test Relevance in the Age of ChatGPT and Generative AI.pptx  Alan Turing and the Turing Test Relevance in the age of ChatGPT and generative AI.docx
4_course/Final_exam/: bak_121_programna_inzheneriia_2026.md  conspect_121_all_expanded.html  conspect_121_programna_inzheneria.html
4_course/Functional_programming/Exam/: heap-sort.cabal
4_course/Functional_programming/Exam/app/: Main.hs
4_course/Functional_programming/Exam/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
4_course/Functional_programming/Exam/dist-newstyle/packagedb/ghc-9.6.7/: heap-sort-0.1.0.0-inplace.conf  package.cache
4_course/Functional_programming/Exam/src/: HeapSort.hs
4_course/Functional_programming/Labs/Lab_1/: .env.example  Main.hs  faculty-newspaper.cabal
4_course/Functional_programming/Labs/Lab_1/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
4_course/Functional_programming/Labs/Lab_1/sql/: database_init.sql
4_course/Functional_programming/Labs/Lab_1/src/: Main.hs
4_course/Functional_programming/Labs/Lab_1/src/Database/: Config.hs  Makefile
4_course/Functional_programming/Labs/Lab_1/src/Models/: Types.hs
4_course/Functional_programming/Labs/Lab_1/src/Operations/: Articles.hs  Authors.hs  Categories.hs  Comments.hs  Materials.hs  Statistics.hs  Tags.hs
4_course/Functional_programming/Labs/Lab_1/src/UI/: Menu.hs  Utils.hs
4_course/Functional_programming/Labs/Lab_2/: DiscreteLog.hi  DiscreteLog.hs  Makefile  discrete-log  discrete-log.cabal
4_course/Functional_programming/Labs/Lab_2/src/: Benchmark.hs  Main.hs  ModPow.hs  Types.hs
4_course/Functional_programming/Labs/Lab_2/src/BSGS/: Parallel.hs  Sequential.hs
4_course/Functional_programming/Labs/Lab_3/: Constants.hs  Formatting.hs  Main.hs  ProcessFile.hs  TextAnalysis.hs  TextProcessing.hs  Types.hs  text-processor.cabal  textbook.txt
4_course/Group_project/: Груповий_проєкт_ІПС_41_Вербицький_Артем.docx  Груповий_проєкт_ІПС_41_Вербицький_Артем.pptx
4_course/Information_systems/: Система_управління_3Д_принтерами_Звіт_Вербицький_Артем_ІПС-41.docx  Система_управління_3Д_принтерами_ТЗ_Вербицький_Артем_ІПС-41.docx
(+583 files in other folders)
