cabal-version:      2.4
name:               heap-sort
version:            0.1.0.0
synopsis:           Пірамідальне сортування на Haskell
description:        Реалізація heap sort з використанням рекурсії
license:            MIT
author:             Artem
maintainer:         artem@example.com
category:           Algorithms
build-type:         Simple

executable heap-sort
    main-is:          Main.hs
    hs-source-dirs:   app
    other-modules:    
    build-depends:    base >=4.17 && <5,
                      heap-sort
    default-language: Haskell2010
    ghc-options:      -Wall -O2

library
    exposed-modules:  HeapSort
    hs-source-dirs:   src
    build-depends:    base >=4.17 && <5
    default-language: Haskell2010
    ghc-options:      -Wall -O2