cabal-version:      2.4
name:               faculty-newspaper
version:            1.0.0.0
synopsis:           Faculty Newspaper Information System
description:        A Haskell-based information system for managing faculty newspaper
license:            MIT
author:             Student
maintainer:         student@example.com
category:           Database
build-type:         Simple

executable faculty-newspaper
    main-is:          Main.hs
    
    build-depends:    base ^>=4.18.0.0,
                      mysql-simple >= 0.4.7,
                      text >= 1.2.5,
                      time >= 1.12,
                      bytestring >= 0.11
    
    hs-source-dirs:   .
    default-language: Haskell2010
    
    ghc-options:      -Wall
                      -threaded
                      -rtsopts
                      -with-rtsopts=-N