cabal-version:      2.4
name:               faculty-newspaper
version:            2.0.0.0
synopsis:           Faculty Newspaper Information System
description:        A modular Haskell-based information system for managing faculty newspaper
                    with categories, tags, and graphic materials support
license:            MIT
author:             Student
maintainer:         student@example.com
category:           Database
build-type:         Simple

executable faculty-newspaper
    main-is:          Main.hs
    
    other-modules:    Database.Config
                    , Models.Types
                    , UI.Utils
                    , UI.Menu
                    , Operations.Authors
                    , Operations.Articles
                    , Operations.Categories
                    , Operations.Tags
                    , Operations.Materials
                    , Operations.Comments
                    , Operations.Statistics
    
    build-depends:    base ^>=4.18.0.0
                    , mysql-simple >= 0.4.7
                    , text >= 1.2.5
                    , time >= 1.12
                    , bytestring >= 0.11
                    , dotenv >= 0.8.0.0
    
    hs-source-dirs:   src
    default-language: Haskell2010
    
    ghc-options:      -Wall
                      -threaded
                      -rtsopts
                      -with-rtsopts=-N