cabal-version:      2.4
name:               discrete-log
version:            1.0.0
build-type:         Simple

executable discrete-log
  main-is:          Main.hs
  hs-source-dirs:   src
  default-language: Haskell2010

  -- Оптимізація + багатопотоковість
  ghc-options:
      -O2
      -threaded
      -rtsopts
      -with-rtsopts=-N

  build-depends:
      base >=4.14 && <5
    , containers
    , unordered-containers
    , hashable
    , parallel
    , deepseq

  other-modules:
      Types
      ModPow
      BSGS.Sequential
      BSGS.Parallel
      Benchmark
