cabal-version:      2.4
name:               text-processor
version:            1.0.0.0
synopsis:           Програма обробки тексту з сортуванням за часткою голосних
description:        Програма для аналізу тексту підручника з програмування.
                    Сортує слова за зростанням частки голосних букв.
license:            MIT
author:             Artem
build-type:         Simple

executable text-processor
    main-is:          Main.hs
    other-modules:    Types
                    , Constants
                    , TextAnalysis
                    , TextProcessing
                    , Formatting
    build-depends:    base >=4.14 && <5
    hs-source-dirs:   .
    default-language: Haskell2010
    ghc-options:      -Wall -O2
